--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -11,4 +11,7 @@ layout: default
     {{ content }}
   </article>
 
+      <article class="post-footer">
+    {{ site.time | date_to_string }}
+    </article>
 </div>
